Issue #2816 - task tags z-index less than popover

--- a/app/styles/components/taskboard-task.scss
+++ b/app/styles/components/taskboard-task.scss
@@ -46,7 +46,7 @@
         flex-basis: 0;
         flex-grow: 1;
         height: .6rem;
-        z-index: 100;
+        z-index: 90;
     }
     .taskboard-task-inner {
         display: flex;
